--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "namastebackend",
   "version": "1.0.0",
   "description": "deepak verma backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "chai",
@@ -12,5 +13,8 @@
     "javascript"
   ],
   "author": "deepak verma",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
